error output
"E:\Program Files\JetBrains\CLion 2018.2.2\bin\cmake\win\bin\cmake.exe" --build C:\Users\joker\CLionProjects\PA3\cmake-build-debug --target PA3 -- -j 4
Scanning dependencies of target PA3
[ 33%] Building CXX object CMakeFiles/PA3.dir/main.cpp.obj
[ 66%] Building CXX object CMakeFiles/PA3.dir/Dealer.cpp.obj
In file included from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\stl_algobase.h:71:0,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\char_traits.h:39,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ios:40,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ostream:38,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:39,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.h:3,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.cpp:1:
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\predefined_ops.h: In instantiation of 'bool __gnu_cxx::__ops::_Iter_equals_val<_Value>::operator()(_Iterator) [with _Iterator = __gnu_cxx::__normal_iterator<Dealer*, std::vector<Dealer> >; _Value = const int]':
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\stl_algo.h:3191:12:   required from 'typename std::iterator_traits<_Iterator>::difference_type std::__count_if(_InputIterator, _InputIterator, _Predicate) [with _InputIterator = __gnu_cxx::__normal_iterator<Dealer*, std::vector<Dealer> >; _Predicate = __gnu_cxx::__ops::_Iter_equals_val<const int>; typename std::iterator_traits<_Iterator>::difference_type = int]'
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\stl_algo.h:3969:29:   required from 'typename std::iterator_traits<_Iterator>::difference_type std::count(_IIter, _IIter, const _Tp&) [with _IIter = __gnu_cxx::__normal_iterator<Dealer*, std::vector<Dealer> >; _Tp = int; typename std::iterator_traits<_Iterator>::difference_type = int]'
C:\Users\joker\CLionProjects\PA3\Dealer.cpp:302:80:   required from here
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\predefined_ops.h:194:17: error: no match for 'operator==' (operand types are 'Dealer' and 'const int')
  { return *__it == _M_value; }
           ~~~~~~^~~~~~~~~~~
In file included from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\stl_algobase.h:67:0,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\char_traits.h:39,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ios:40,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ostream:38,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:39,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.h:3,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.cpp:1:
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\stl_iterator.h:856:5: note: candidate: template<class _IteratorL, class _IteratorR, class _Container> bool __gnu_cxx::operator==(const __gnu_cxx::__normal_iterator<_IteratorL, _Container>&, const __gnu_cxx::__normal_iterator<_IteratorR, _Container>&)
     operator==(const __normal_iterator<_IteratorL, _Container>& __lhs,
     ^~~~~~~~
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\stl_iterator.h:856:5: note:   template argument deduction/substitution failed:
In file included from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\stl_algobase.h:71:0,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\char_traits.h:39,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ios:40,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ostream:38,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:39,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.h:3,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.cpp:1:
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\predefined_ops.h:194:17: note:   'Dealer' is not derived from 'const __gnu_cxx::__normal_iterator<_IteratorL, _Container>'
  { return *__it == _M_value; }
           ~~~~~~^~~~~~~~~~~
In file included from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\stl_algobase.h:67:0,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\char_traits.h:39,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ios:40,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ostream:38,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:39,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.h:3,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.cpp:1:
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\stl_iterator.h:863:5: note: candidate: template<class _Iterator, class _Container> bool __gnu_cxx::operator==(const __gnu_cxx::__normal_iterator<_Iterator, _Container>&, const __gnu_cxx::__normal_iterator<_Iterator, _Container>&)
     operator==(const __normal_iterator<_Iterator, _Container>& __lhs,
     ^~~~~~~~
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\stl_iterator.h:863:5: note:   template argument deduction/substitution failed:
In file included from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\stl_algobase.h:71:0,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\char_traits.h:39,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ios:40,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ostream:38,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:39,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.h:3,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.cpp:1:
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\predefined_ops.h:194:17: note:   'Dealer' is not derived from 'const __gnu_cxx::__normal_iterator<_Iterator, _Container>'
  { return *__it == _M_value; }
           ~~~~~~^~~~~~~~~~~
In file included from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\mingw32\bits\c++allocator.h:33:0,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\allocator.h:46,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\string:41,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\locale_classes.h:40,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\ios_base.h:41,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ios:42,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ostream:38,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:39,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.h:3,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.cpp:1:
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ext\new_allocator.h:139:5: note: candidate: template<class _Tp> bool __gnu_cxx::operator==(const __gnu_cxx::new_allocator<_Tp>&, const __gnu_cxx::new_allocator<_Tp>&)
     operator==(const new_allocator<_Tp>&, const new_allocator<_Tp>&)
     ^~~~~~~~
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ext\new_allocator.h:139:5: note:   template argument deduction/substitution failed:
In file included from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\stl_algobase.h:71:0,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\char_traits.h:39,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ios:40,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ostream:38,
                 from e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:39,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.h:3,
                 from C:\Users\joker\CLionProjects\PA3\Dealer.cpp:1:
e:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\predefined_ops.h:194:17: note:   'Dealer' is not derived from 'const __gnu_cxx::new_allocator<_Tp>'
  { return *__it == _M_value; }
           ~~~~~~^~~~~~~~~~~
CMakeFiles\PA3.dir\build.make:74: recipe for target 'CMakeFiles/PA3.dir/Dealer.cpp.obj' failed
mingw32-make.exe[3]: *** [CMakeFiles/PA3.dir/Dealer.cpp.obj] Error 1
mingw32-make.exe[3]: *** Waiting for unfinished jobs....
CMakeFiles\Makefile2:71: recipe for target 'CMakeFiles/PA3.dir/all' failed
CMakeFiles\Makefile2:83: recipe for target 'CMakeFiles/PA3.dir/rule' failed
mingw32-make.exe[2]: *** [CMakeFiles/PA3.dir/all] Error 2
mingw32-make.exe[1]: *** [CMakeFiles/PA3.dir/rule] Error 2
mingw32-make.exe: *** [PA3] Error 2
Makefile:117: recipe for target 'PA3' failed
